deploying on heroku

--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -1,11 +1,5 @@
-
-<%- await include(`views/partials/header.ejs`) %>
-    
-<div class="container">
+<%- await include(`views/partials/header.ejs`) %> <div class="container">
     <h1>404 - Page does not exist</h1>
-    <div>
-        Go to the <a href='/'>home page</a>
+    <div> Go to the <a href='/'>home page</a>
     </div>
-</div>    
-    
-<%- await include(`views/partials/footer.ejs`) %>
+</div> <%- await include(`views/partials/footer.ejs`) %>
