--- a/views/surveys.ejs
+++ b/views/surveys.ejs
@@ -1,17 +1,10 @@
-
-    <%- await include(`views/partials/header.ejs`) %>
-    
-    <h1>Active surveys</h1>
-    
-    <% for (let survey of surveys) { %>
-        <div class="card survey-card mb-3">
-            <a href="/survey/<%= survey.id%>">
-                <div class="card-body">
-                    <div class="card-title"> <%= survey.name %> </div>
-                    <div class="card-text"> <%= survey.description %> </div>
-                </div>
-            </a>
-        </div>
-    <% } %>
-    
-    <%- await include(`views/partials/footer.ejs`) %>
+<%- await include(`views/partials/header.ejs`)  %> <div class="container">
+    <h1>Active Surveys</h1> <% for (let survey of surveys) { %> <div class="card survey-card mb-3">
+        <a href="/survey/<%= survey.id %>">
+            <div class="card-body">
+                <h5 class="card-title"><%= survey.name %></h5>
+                <p class="card-text"><%= survey.description %></p>
+            </div>
+        </a>
+    </div> <% } %>
+</div> <%- await include(`views/partials/footer.ejs`)  %>
